--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,5 +1,5 @@
 doctype html
-html(lang=”en” prefix="og: http://ogp.me/ns#")
+html(lang="en" prefix="og: http://ogp.me/ns#")
   head
       block head
         meta(charset="utf-8")
