--- a/views/list.pug
+++ b/views/list.pug
@@ -2,8 +2,10 @@ extends layout
 
 append head
   //- add page specific styles by appending to the head
+  link(rel="stylesheet" id="flavor")
   link(rel="stylesheet" href="/stylesheets/main.css")
   link(rel="stylesheet" href="/stylesheets/navbar.css")
+  
   
   //- add page specific js
   script(src="/javascripts/index.js" type="module" defer)
