--- a/views/main.pug
+++ b/views/main.pug
@@ -2,6 +2,7 @@ extends layout
 
 append head
   //- add page specific styles by appending to the head
+  link(rel="stylesheet" id="flavor")
   link(rel="stylesheet" href="/stylesheets/main.css")
   link(rel="stylesheet" href="/stylesheets/navbar.css")
   
