--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -3,8 +3,7 @@ body {
 }
 
 .navbar {
-  /* background-color: #B83436; */
-  background-color: wheat;
+  background-color: #b83436;
   box-sizing: border-box;
   display: grid;
   grid-template-columns: 250px 1fr 300px;
