--- a/views/list.pug
+++ b/views/list.pug
@@ -42,7 +42,7 @@ block content
 
     div.main
         div.main_left
-            img(src="../images/default-logo.png" id="logo" class="logoSmall")
+            img(src=`../images/${fruit}-logo.png` id="logo" class="logoSmall")
             div.lists
                 p.main_left_menu_title Lists
                 ul
