--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,7 +16,7 @@ html
         //- WHEN PAGE LOADS, CURSIVE IS DISPLAYED, THEN THE FONT CHANGES TO LILITA. DOESNT LOOK 
         //- THE BEST CHANGING THE FONT FOR NOW, WILL WILL CHANGE BACK AT LATER DATE
         //- WHEN IT CAN BE FIXED
-        script(src="/javascripts/test.js")
+        script(src="/javascripts/theme.js" type="module")
         link(rel="preconnect" href="https://fonts.gstatic.com")
         link(href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Mukta:wght@200;300;400;600;800&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet")
         link(rel='stylesheet' href='/stylesheets/index.css')
