--- a/views/main.pug
+++ b/views/main.pug
@@ -40,7 +40,7 @@ block content
     //- FROM PROFILE.JS
     div.main
         div.main_left
-            img(src="../images/default-logo.png" id="logo" class="logoSmall")
+            img(src=`../images/${fruit}-logo.png` id="logo" class="logoSmall")
             div.lists
                 p.main_left_menu_title Lists
                 ul
