--- a/views/sandbox.pug
+++ b/views/sandbox.pug
@@ -33,7 +33,7 @@ block content
 
     div.main
         div.main_left
-            img(src="../images/default-logo.png" id="logo" class="logoSmall")
+            img(src="../images/strawberry-logo.png" id="logo" class="logoSmall")
             div.lists
                 p.main_left_menu_title Lists
                 ul
