--- a/views/list.pug
+++ b/views/list.pug
@@ -10,7 +10,7 @@ append head
   script(src="/javascripts/index.js" type="module" defer)
   script(src="/javascripts/manage-tasks.js" type="module" defer)
   script(src="/javascripts/manage-lists.js" type="module" defer)
-  script(src="/javascripts/delete-tasks.js" type="module" defer)
+  script(src="/javascripts/permanent-delete-tasks.js" type="module" defer)
   script(src="/javascripts/move-to-trash.js" type="module" defer)
 
 block content
@@ -83,7 +83,7 @@ block content
                         //- br
                         button(type="submit" class="saveButton add-task-button" style="display: none")
                 else if trash
-                    button(class="saveButton empty-trash" style='width: 25%') Permanently Delete All
+                    button(class="saveButton delete-all-button" style='width: 25%' id=trash.id) Permanently Delete All
                 if allTrashTasks
                     div.tasks
                         ol.ordered-list
